--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.EverLoad</groupId>
 	<artifactId>everload</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Everload</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
