Add admin security and logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=Everload
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+admin.username=admin
+admin.password=admin
+jwt.secret=VGhpcy1pcy1hLXNlY3JldA==
+credentials.clientId=
+credentials.clientSecret=
+credentials.youtubeApiKey=
