--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=Everload
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+logging.file.name=everload.log
+logging.level.root=INFO
+logging.level.com.EverLoad=INFO
